test/integration/bad/tuples/stanc.expected
  $ ../../../../../install/default/bin/stanc incomplete1.stan
Syntax error in 'incomplete1.stan', line 2, column 30 to column 35, parsing error:
   -------------------------------------------------
     1:  data {
     2:    tuple( array [ foo ] real , while
                                       ^
   -------------------------------------------------

Incomplete type specification, expected further types followed by ")" to complete tuple.
  $ ../../../../../install/default/bin/stanc incomplete2.stan
Syntax error in 'incomplete2.stan', line 1, column 33 to column 36, parsing error:
   -------------------------------------------------
     1:  data { tuple( array [ foo ] real foo
                                          ^
   -------------------------------------------------

Invalid type specification, unmatched "(".
Expected "," followed by further types and ")" to complete tuple.
  $ ../../../../../install/default/bin/stanc incomplete3.stan
Syntax error in 'incomplete3.stan', line 2, column 0 to column 0, parsing error:
   -------------------------------------------------
     1:  model { tuple( complex , complex ) while
         ^
   -------------------------------------------------

Expected a new identifier after comma in declaration.
All variables declared must be of the same type, and any initializing assignment must follow the identifier before the next comma.
  $ ../../../../../install/default/bin/stanc incomplete4.stan
Syntax error in 'incomplete4.stan', line 2, column 45 to column 50, parsing error:
   -------------------------------------------------
     1:  data {
     2:      tuple( real , tuple( complex , complex ) while
                                                      ^
   -------------------------------------------------

Incomplete type specification. Expected either ")" or "," followed by
further types and ")" to complete tuple.
  $ ../../../../../install/default/bin/stanc incomplete5.stan
Syntax error in 'incomplete5.stan', line 1, column 14 to column 19, parsing error:
   -------------------------------------------------
     1:  data { tuple( while
                       ^
   -------------------------------------------------

Incomplete type declaration. Expected comma seperated list of types between "("
and ")" to declare tuple variable.
  $ ../../../../../install/default/bin/stanc incomplete6.stan
Syntax error in 'incomplete6.stan', line 2, column 30 to column 31, parsing error:
   -------------------------------------------------
     1:  transformed data {
     2:    tuple(real, int) x = (3.5, 4;
                                       ^
   -------------------------------------------------

Ill-formed phrase. Found an expression. This can be followed by a ",", a "}", a ")", a "]", a "[" or an infix or postfix operator.
  $ ../../../../../install/default/bin/stanc incomplete7.stan
Syntax error in 'incomplete7.stan', line 2, column 20 to column 21, parsing error:
   -------------------------------------------------
     1:  functions {
     2:     tuple(real, int, ) foo()
                             ^
     3:  }
   -------------------------------------------------

Expected comma-separated list of types followed by ")" to declare tuple return type.
  $ ../../../../../install/default/bin/stanc tuple-dataonly-ad.stan
Semantic error in 'tuple-dataonly-ad.stan', line 13, column 12 to column 19:
   -------------------------------------------------
    11:  
    12:  model {
    13:    target += foo(ps);
                     ^
    14:  }
   -------------------------------------------------

Ill-typed arguments supplied to function 'foo':
(tuple(real, real))
Available signatures:
(data tuple(real, real)) => real
  The first argument must be data-only. (Local variables are assumed to
  depend on parameters; same goes for function inputs unless they are marked
  with the keyword 'data'.)
  $ ../../../../../install/default/bin/stanc tuple-dataonly-ad2.stan
Semantic error in 'tuple-dataonly-ad2.stan', line 17, column 12 to column 24:
   -------------------------------------------------
    15:  
    16:  model {
    17:    target += foo((x1,x2));
                     ^
    18:  }
   -------------------------------------------------

Ill-typed arguments supplied to function 'foo':
(tuple(real, real))
Available signatures:
(data tuple(real, real)) => real
  The first argument must be data-only. (Local variables are assumed to
  depend on parameters; same goes for function inputs unless they are marked
  with the keyword 'data'.)
